--- a/locales/de.json
+++ b/locales/de.json
@@ -166,6 +166,7 @@
     "phone": "0471 052460",
     "email": "laser@prolas.it - info@prolas.it",
     "pec": "Pec-Adresse: info@pec.prolas.it",
-    "jobs": "Jobs"
+    "jobs": "Jobs",
+    "cookieTerms": "Wir verwenden technische Cookies für die Spracheinstellungen der Benutzer"
   }
 }
